--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -101,7 +101,9 @@
   <ItemGroup>
     <ClCompile Include="ASCIIMeshReaderTest.cpp" />
     <ClCompile Include="ComputationalMeshBuilderTest.cpp" />
-    <ClCompile Include="ComputationalMeshSolverHelperTest.cpp" />
+    <ClCompile Include="ComputationalMeshSolverHelperTest.cpp">
+      <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Level3</WarningLevel>
+    </ClCompile>
     <ClCompile Include="ComputationalMoleculeTest.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
