--- a/FiniteVolume2DLib/FiniteVolume2DLib.vcxproj
+++ b/FiniteVolume2DLib/FiniteVolume2DLib.vcxproj
@@ -44,6 +44,7 @@
     <ClInclude Include="MeshBuilder.h" />
     <ClInclude Include="MeshChecker.h" />
     <ClInclude Include="MeshConnectivity.h" />
+    <ClInclude Include="ParametrizedLineSegment.h" />
     <ClInclude Include="Thread.hpp" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="Vector.h" />
@@ -78,6 +79,7 @@
     <ClCompile Include="MeshBuilder.cpp" />
     <ClCompile Include="MeshChecker.cpp" />
     <ClCompile Include="MeshConnectivity.cpp" />
+    <ClCompile Include="ParametrizedLineSegment.cpp" />
     <ClCompile Include="Util.cpp" />
     <ClCompile Include="Vector.cpp" />
     <ClCompile Include="Node.cpp" />
